// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a disabled select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        disabled=""
        id="weather"
      >
        <option
          disabled=""
          value="sunny"
        >
          Sunny
        </option>
        <option
          disabled=""
          value="windy"
        >
          Windy
        </option>
        <option
          disabled=""
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a full width select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9.c9.c9 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c8 {
  display: inline-block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c10[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c10[disabled] + .c11 {
  fill: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c13[disabled] + .c11 {
  fill: #8d8d8d;
}

.c6 {
  display: inline-block;
}

.c5 {
  display: block;
}

.c4 {
  margin-bottom: 0 !important;
}

.c2 {
  width: 100%;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c3 c1"
      style="align-items: center;"
    >
      <label
        class="c4 c5 c6 c7"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c8 c9"
      style="width: 100%;"
      width="100%"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c10"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c11 c12"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13 + .c10 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="true"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a select with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          selected=""
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a select with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #8e9ca8;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          disabled=""
          selected=""
        >
          Select weather...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10.c10.c10 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c9 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c11[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c11[disabled] + .c12 {
  fill: #8d8d8d;
}

.c11:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <span
      class="c7 c8 c1"
    >
      Required for your fannypack
    </span>
    <div
      class="c9 c10"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c11"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c12 c13"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c17 + .c10 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c20[disabled] + .c10 {
  fill: #8d8d8d;
}

.c21[disabled] + .c10 {
  fill: #8d8d8d;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

abbr.c13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c13 {
  font-style: italic;
}

kbd.c13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c13 {
  font-weight: bold;
}

sub.c13,
sup.c13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c13,
u.c13 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c13,
cite.c13,
var.c13,
em.c13 {
  font-style: italic;
}

kbd.c13,
pre.c13,
samp.c13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  margin-bottom: 0 !important;
}

.c12 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <span
      class="c12 c13 c1"
    >
      Must be awesome
    </span>
  </div>
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10.c10.c10 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c9 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c11[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c11[disabled] + .c12 {
  fill: #8d8d8d;
}

.c11:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c14[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15[disabled] + .c12 {
  fill: #8d8d8d;
}

.c15 + .c12 {
  width: 15px;
  height: 15px;
}

.c16[disabled] + .c12 {
  fill: #8d8d8d;
}

.c16 + .c12 {
  width: 25px;
  height: 25px;
}

.c17[disabled] + .c12 {
  fill: #8d8d8d;
}

.c17 + .c12 {
  width: 30px;
  height: 30px;
}

.c18[disabled] + .c12 {
  fill: #8d8d8d;
}

.c19[disabled] + .c12 {
  fill: #8d8d8d;
}

.c20[disabled] + .c12 {
  fill: #8d8d8d;
}

.c21[disabled] + .c12 {
  fill: #8d8d8d;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
      <span
        class="c7 c8 c1"
      >
        OPTIONAL
      </span>
    </div>
    <div />
    <div
      class="c9 c10"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c11"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c12 c13"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`sizes renders correctly for a select with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  font-size: 1.5rem;
}

.c9 + .c10 {
  width: 30px;
  height: 30px;
}

.c9 + .c16 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`sizes renders correctly for a select with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  font-size: 1.25rem;
}

.c9 + .c10 {
  width: 25px;
  height: 25px;
}

.c9 + .c15 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`sizes renders correctly for a select with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  font-size: 0.8rem;
}

.c9 + .c10 {
  width: 15px;
  height: 15px;
}

.c9 + .c14 {
  width: 10px;
  height: 10px;
  top: 10px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a select with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="true"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a select with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a select with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a select with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8.c8.c8 {
  position: relative;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c7 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c16 + .c10 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c10 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="weather"
        style="font-weight: 600;"
      >
        Weather
      </label>
    </div>
    <div />
    <div
      class="c7 c8"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c9"
        id="weather"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div />
  </div>
</div>
`;
